fix: #1533: add default button color due wrong color on some iOS Safari versions

--- a/src/styles/lib.scss
+++ b/src/styles/lib.scss
@@ -27,6 +27,7 @@ button {
   border: none;
   text-transform: inherit;
   background: transparent;
+  color: $graytext-color;
 
   &:focus {
     outline: 0;
